# JOB-HUNTER

./: .env.example  .gitignore  LICENSE  README.md  config.py  firebase.json  main.py  pyproject.toml  requirements.txt  scheduler.py  server.py
.github/workflows/: test.yml
compliance/: __init__.py  rate_limiter.py  robots.py
news/: __init__.py  aggregator.py  models.py
notify/: email.py
performance/: load_test.js
pipeline/: dedupe.py  filter.py  match.py
pipeline/ats/: __init__.py  achievements.py  aggregator.py  consistency.py  domain.py  explainability.py  extractors.py  models.py  parseability.py  rewrite_suggestions.py  role_scorers.py  section_parser.py  semantic.py  seniority.py  skill_weights.py  taxonomy.py
sources/: ai_jobs.py  arbeitnow.py  arc_dev.py  ashby.py  base.py  builtin.py  career_page.py  crypto_jobs.py  dribbble.py  dynamite_jobs.py  golang_cafe.py  greenhouse.py  hackernews.py  himalayas.py  jobspresso.py  lever.py  manual_urls.py  python_jobs.py  remoteok.py  remotive.py  rustjobs.py  wellfound.py  weworkremotely.py  ycombinator.py
storage/: db.py  models.py
tests/: conftest.py  test_news.py  test_notify.py  test_pipeline.py  test_server.py  test_sources.py
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/login/: page.tsx
web/app/auth/signup/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/components/: ThemeToggle.tsx
web/components/auth/: AuthProvider.tsx
web/playwright-report/: index.html
web/tests/: e2e.spec.ts
(+4 files in other folders)
